# sapp

./: Cargo.toml  README.md  build_mac.sh
icons/: Icon.icns
src/: main.rs  upload.rs
