[package]
name = "sendme"
version = "0.1.0"
edition = "2021"
description = "Send your files"

[dependencies]
eframe = "0.24.1"
flume = "0.11.0"
rfd = "0.11"
anyhow = "1.0.76"
futures = "0.3.29"
iroh-bytes = "0.12.0"
iroh-net = "0.12.0"
rand = "0.8.5"
walkdir = "2.4.0"
tokio-util = "0.7.10"
tokio = "1.35.1"
num_cpus = "1.16.0"
hex = "0.4.3"
image = "0.24.7"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { git = "https://github.com/servo/core-foundation-rs" }

[package.metadata.bundle]
name = "Sendme"
identifier = "computer.n0.sendme"
icon = ["icons/Icon.icns"]
resources = ["resources"]
version = "0.1.0"
copyright = "Copyright (c) N0 Inc (2023). All rights reserved."
category = "Developer Tool"
short_description = "Share your data"
osx_minimum_system_version = "10.12"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"